--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-draggable-plus": "^0.5.0",
     "vue-router": "4"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.3.1",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-devtools": "^7.3.5",
     "vue-tsc": "^2.0.21"
   }
 }
