--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint-staged": "vue-tsc && lint-staged",
+    "prepare": "husky"
   },
   "dependencies": {
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
+    "husky": "^9.0.11",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "4"
@@ -18,10 +21,17 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
     "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "@unocss/transformer-directives": "^0.61.0",
     "@unocss/transformer-variant-group": "^0.61.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "lint-staged": "^15.2.7",
     "naive-ui": "^2.38.2",
+    "prettier": "^3.3.2",
     "sass": "^1.77.6",
     "typescript": "^5.2.2",
     "unocss": "^0.61.0",
@@ -30,5 +40,10 @@
     "vite": "^5.3.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.21"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,vue}": [
+      "eslint --fix"
+    ]
   }
 }
