--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint-staged": "vue-tsc && lint-staged",
     "prepare": "husky"
@@ -20,6 +20,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@iconify/vue": "^4.1.2",
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
@@ -27,21 +28,21 @@
     "@unocss/transformer-directives": "^0.61.0",
     "@unocss/transformer-variant-group": "^0.61.0",
     "@vitejs/plugin-vue": "^5.0.5",
-    "eslint": "^9.6.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.27.0",
     "lint-staged": "^15.2.7",
     "naive-ui": "^2.38.2",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.16.0",
     "unocss": "^0.61.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.3.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.3.5",
-    "vue-tsc": "^2.0.21"
+    "vue-tsc": "^2.0.26"
   },
   "lint-staged": {
     "src/**/*.{js,ts,vue}": [
