--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
+    "echarts": "^5.5.1",
     "husky": "^9.0.11",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
