--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "@amap/amap-jsapi-types": "^0.0.15",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "husky": "^9.0.11",
     "pinia": "^2.1.7",
+    "tlbs-map-vue": "^1.0.0",
     "vue": "^3.4.29",
     "vue-draggable-plus": "^0.5.0",
     "vue-router": "4"
