--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "husky": "^9.0.11",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
     "tlbs-map-vue": "^1.0.0",
     "vue": "^3.4.29",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.6.0",
     "@iconify/vue": "^4.1.2",
+    "@types/mockjs": "^1.0.10",
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
@@ -44,6 +46,7 @@
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.3.1",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.3.5",
     "vue-tsc": "^2.0.26"
