--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
+    "@unocss/preset-uno": "^0.63.4",
     "@unocss/transformer-directives": "^0.61.0",
     "@unocss/transformer-variant-group": "^0.61.0",
     "@vitejs/plugin-vue": "^5.0.5",
