--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "husky": "^9.0.11",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "tlbs-map-vue": "^1.0.0",
     "vue": "^3.4.29",
     "vue-draggable-plus": "^0.5.0",
