--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "unocss": "^0.61.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
+    "unplugin-vue-macros": "^2.13.7",
     "vite": "^5.3.1",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
