chore: 调整环境变量的配置

--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,15 @@
 ENV = 'development'
 
-# 访问后端服务器地址
-VITE_PROXY_URL = ''
+# 后端服务地址
+VITE_SERVICE_URL = 'http://192.168.5.148'
 
-# 接口网关
-VITE_BASE_API = '/api'
+# 后端服务端口
+VITE_SERVICE_PORT = '9000'
 
-# 静态资源访问路径 
+# 后端服务前缀
+VITE_SERVICE_PREFIX = '/api'
+
+# 公共基础路径 
 VITE_PUBLIC_PATH =''
 
 # web socket请求地址
