--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -41,7 +41,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "typeRoots": ["./node_modules/@types/", "./node_modules", "src/types"] // 指定包含类型声明的文件或文件夹
+    "typeRoots": ["./node_modules/@types/", "./node_modules", "src/typings"] // 指定包含类型声明的文件或文件夹
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/**/*.d.ts"]
 }
