--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
 ENV = 'development'
 
 # 后端服务地址
-VITE_SERVICE_URL = 'http://192.168.5.148'
+VITE_SERVICE_URL = ''
 
 # 后端服务端口
-VITE_SERVICE_PORT = '9000'
+VITE_SERVICE_PORT = ''
 
 # 后端服务前缀
 VITE_SERVICE_PREFIX = '/api'
