feat: 环境变量调整

--- a/.env.production
+++ b/.env.production
@@ -9,8 +9,8 @@ VITE_SERVICE_PORT = ''
 # 后端服务前缀
 VITE_SERVICE_PREFIX = '/api'
 
-# 公共基础路径 
-VITE_PUBLIC_PATH ='/'
-
-# web socket请求地址
+# web socket地址
 VITE_SOCKET_URL = ''
+
+# 公共基础路径 
+VITE_APP_PUBLIC_PATH ='/'
