--- a/package.json
+++ b/package.json
@@ -13,44 +13,45 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@amap/amap-jsapi-types": "^0.0.15",
-    "@vueuse/core": "^10.11.0",
-    "axios": "^1.7.2",
-    "echarts": "^5.5.1",
-    "husky": "^9.0.11",
+    "@vueuse/core": "^10.11.1",
+    "axios": "^1.9.0",
+    "echarts": "^5.6.0",
+    "husky": "^9.1.7",
     "mockjs": "^1.1.0",
-    "pinia": "^3.0.1",
-    "pinia-plugin-persistedstate": "^4.1.3",
-    "tlbs-map-vue": "^1.0.0",
-    "vue": "^3.5.13",
-    "vue-draggable-plus": "^0.5.0",
-    "vue-router": "4"
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.3.0",
+    "tlbs-map-vue": "^1.3.1",
+    "vue": "^3.5.16",
+    "vue-draggable-plus": "^0.5.6",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
-    "@iconify/vue": "^4.1.2",
+    "@eslint/js": "^9.28.0",
+    "@iconify/vue": "^4.3.0",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^20.14.8",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.27.0",
-    "lint-staged": "^15.2.7",
-    "naive-ui": "^2.40.3",
-    "prettier": "^3.3.2",
-    "sass": "^1.77.6",
-    "typescript": "^5.2.2",
-    "typescript-eslint": "^7.16.0",
-    "unocss": "^0.61.0",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0",
-    "unplugin-vue-macros": "^2.13.7",
-    "vite": "^5.3.1",
+    "@types/node": "^20.19.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.33.0",
+    "lint-staged": "^15.5.2",
+    "naive-ui": "^2.41.1",
+    "prettier": "^3.5.3",
+    "sass": "^1.89.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^7.18.0",
+    "unocss": "^0.61.9",
+    "unplugin-auto-import": "^0.17.8",
+    "unplugin-vue-components": "^0.27.5",
+    "vite": "^6.3.5",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.3.5",
-    "vue-tsc": "^2.0.26"
+    "vite-plugin-vue-devtools": "^7.7.6",
+    "vue-macros": "3.0.0-beta.14",
+    "vue-tsc": "^2.2.10"
   },
   "lint-staged": {
     "src/**/*.{js,ts,vue}": [
