--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "echarts": "^5.6.0",
     "husky": "^9.1.7",
+    "md-editor-v3": "^5.7.1",
     "mockjs": "^1.1.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.3.0",
