--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@amap/amap-jsapi-types": "^0.0.15",
     "@vueuse/core": "^10.11.1",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.9.0",
     "echarts": "^5.6.0",
     "husky": "^9.1.7",
