chore: 添加vite-plugin-svg-icons 的 Typescript 支持

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,11 @@
     },
     "resolveJsonModule": true,
     "typeRoots": ["node_modules", "src/types"],
-    "types": ["naive-ui/volar", "vue-macros/macros-global"],
+    "types": [
+      "naive-ui/volar",
+      "vue-macros/macros-global",
+      "vite-plugin-svg-icons/client"
+    ],
     "allowImportingTsExtensions": true,
     /* Linting */
     "strict": true,
