chore(deps): 更新依赖

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "cSpell.words": ["unocss", "iconify", "amap", "unplugin", "vite"],
+
   // Disable the default formatter, use eslint instead
   "prettier.enable": false,
   "editor.formatOnSave": false,
