--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "vite --host",
-    "build": "vue-tsc && vite build",
+    "build": "pnpm lint:fix && vite build",
     "preview": "vite preview",
-    "lint-staged": "vue-tsc && lint-staged",
     "prepare": "husky",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
@@ -20,7 +19,6 @@
     "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.12.2",
     "echarts": "^5.6.0",
-    "husky": "^9.1.7",
     "md-editor-v3": "^5.8.5",
     "mockjs": "^1.1.0",
     "pinia": "^3.0.3",
@@ -42,6 +40,7 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.35.0",
     "eslint-plugin-format": "^1.0.1",
+    "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
     "naive-ui": "^2.43.1",
     "prettier": "^3.6.2",
@@ -58,10 +57,7 @@
     "vue-tsc": "^3.0.7"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{md,html,css,json,yml}": "prettier --write"
+    "*.{vue,js,ts,jsx,tsx}": ["eslint --fix", "prettier --write"],
+    "*.{css,scss,less,style,html,md}": ["prettier --write"]
   }
 }
