--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "prettier": "^3.6.2",
     "sass": "^1.92.1",
     "typescript": "^5.9.2",
-    "unocss": "^0.61.9",
+    "unocss": "^66.5.1",
     "unplugin-auto-import": "^0.17.8",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^6.3.6",
@@ -61,6 +61,8 @@
       "prettier --write",
       "eslint --fix"
     ],
-    "*.{css,scss,less,styl,html,md}": ["prettier --write"]
+    "*.{css,scss,less,styl,html,md}": [
+      "prettier --write"
+    ]
   }
 }
