--- a/package.json
+++ b/package.json
@@ -5,55 +5,57 @@
   "private": true,
   "scripts": {
     "dev": "vite --host",
-    "build": "vue-tsc && pnpm lint:fix && vite build",
+    "build": "pnpm tc && pnpm lint:fix && vite build",
     "preview": "vite preview",
     "prepare": "husky",
+    "tc": "vue-tsc --noEmit -p tsconfig.app.json",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "lint:staged": "pnpm tc && lint-staged"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@amap/amap-jsapi-types": "^0.0.15",
-    "@vueuse/core": "^10.11.1",
+    "@vueuse/core": "^13.9.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.12.2",
-    "echarts": "^5.6.0",
-    "md-editor-v3": "^5.8.5",
+    "echarts": "^6.0.0",
+    "md-editor-v3": "^6.0.1",
     "mockjs": "^1.1.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "tlbs-map-vue": "^1.3.1",
     "vue": "^3.5.21",
-    "vue-draggable-plus": "^0.5.6",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.3.0",
-    "@iconify/vue": "^4.3.0",
+    "@iconify/vue": "^5.0.0",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^20.19.14",
+    "@types/node": "^24.5.1",
     "@unocss/eslint-plugin": "^66.5.1",
-    "@vitejs/plugin-vue": "^5.2.4",
-    "@vitejs/plugin-vue-jsx": "^4.2.0",
-    "@vue-macros/eslint-config": "3.0.0-beta.23",
-    "@vue/tsconfig": "^0.7.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "@vue-macros/eslint-config": "3.0.0-rc.0",
+    "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.35.0",
     "eslint-plugin-format": "^1.0.1",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.2",
+    "lint-staged": "^16.1.6",
     "naive-ui": "^2.43.1",
     "prettier": "^3.6.2",
     "sass": "^1.92.1",
     "typescript": "^5.9.2",
     "unocss": "^66.5.1",
-    "unplugin-auto-import": "^0.17.8",
-    "unplugin-vue-components": "^0.27.5",
-    "vite": "^6.3.6",
+    "unplugin-auto-import": "^20.1.0",
+    "unplugin-vue-components": "^29.0.0",
+    "vite": "^7.1.5",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.7.7",
-    "vue-macros": "3.0.0-beta.14",
+    "vite-plugin-vue-devtools": "^8.0.2",
+    "vue-macros": "3.0.0-beta.10",
     "vue-tsc": "^3.0.7"
   },
   "lint-staged": {
